Fix bug #1238865.
Add scrollbar for legend.
Remove truncating for legend strings.

Reviewed-on: https://staging.review.linaro.org/454

--- a/dashboard_app/static/dashboard_app/css/image-charts.css
+++ b/dashboard_app/static/dashboard_app/css/image-charts.css
@@ -99,6 +99,8 @@ div.selector .selector-chosen select {
     height: 200px;
     width: 15%;
     display: inline-block;
+    overflow-x: scroll;
+    white-space: nowrap;
 }
 
 #main_container {
